some defaults to stop images overflowing the product page in FF

--- a/assets/_scss/pages/_product.scss
+++ b/assets/_scss/pages/_product.scss
@@ -26,6 +26,11 @@ $thumbsize: 50px;
 			}
 		}
 	}
+	img {
+		width: 100%;
+		max-width: 100%;
+		height: auto;
+	}
 }
 #product .select {
 	margin-bottom: 0;
